[package]
name = "ds"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Tzcan <tzcan@foxmail.com>"]
repository = "https://github.com/Tellcts/DataStructure.git"
description = "Implements almost useful data structures on Rust."

[lib]
name = "ds"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
